# wen.engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bootstrap-wen.sh  build-shadercross.py  vcpkg-configuration.json  vcpkg.json
.zed/: debug.json  tasks.json
cmake/: CommonMacros.txt
editor/: CMakeLists.txt
editor/include/weditor/: wed.hpp  weditor.hpp  weditor_defines.hpp
editor/source/: weditor.cpp
editor/source/imgui/: window_system.cpp
sandbox/: CMakeLists.txt
sandbox/source/: entry.cpp  game.cpp  game.hpp  sandbox.cpp
shaders/: Builtin.Bindless.common.glsl  Builtin.Common.glsl  Builtin.ImGui.common.glsl  Builtin.ImGui.frag.glsl  Builtin.ImGui.vert.glsl  Builtin.Mesh.common.glsl  Builtin.Mesh.frag.glsl  Builtin.Mesh.vert.glsl  Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl  Builtin.Sprite.common.glsl  Builtin.Sprite.frag.glsl  Builtin.Sprite.vert.glsl
source/: Application.cpp  Application.h  CMakeLists.txt  Wen_Utils.h  main.cpp
source/wvk/: wvk_entry.hpp  wvk_wen.hpp
source/wvk/common/: wvk_defines.hpp  wvk_error.hpp  wvk_filesystem.cpp  wvk_filesystem.hpp  wvk_impl.common.cpp  wvk_logger.cpp  wvk_logger.hpp  wvk_pch.hpp
source/wvk/core/: wvk_application.cpp  wvk_application.hpp  wvk_camera.hpp  wvk_core.cpp  wvk_core.hpp  wvk_gltf.cpp  wvk_gltf.hpp  wvk_gltfloader.cpp  wvk_gltfloader.hpp  wvk_impl.cpp  wvk_json.cpp  wvk_json.hpp  wvk_ldtk.cpp  wvk_ldtk.hpp  wvk_ldtktilemap.cpp  wvk_math.cpp  wvk_math.hpp  wvk_tilemap.cpp  wvk_tinygltfimpl.cpp
source/wvk/ecs/: wvk_component.ecs.cpp  wvk_component.ecs.hpp  wvk_ecs.hpp
source/wvk/gfx/: wvk_camera.gfx.cpp  wvk_camera.gfx.hpp  wvk_deferred.gfx.cpp  wvk_deferred.gfx.hpp  wvk_gfx.cpp  wvk_gfx.hpp  wvk_gfximpl.cpp  wvk_gfximpl.hpp  wvk_gfxinst.cpp  wvk_gfxinst.hpp  wvk_gfxinstimpl.cpp  wvk_gfxinstimpl.hpp  wvk_gfxpipeline.cpp  wvk_gfxpipeline.hpp  wvk_gfxtypes.hpp  wvk_gfxutils.cpp  wvk_gfxutils.hpp  wvk_gfxvkinit.hpp  wvk_gfxvulkan.cpp  wvk_gfxvulkan.hpp  wvk_init.gfx.hpp  wvk_inst.gfx.cpp  wvk_inst.gfx.hpp  wvk_instimpl.gfx.cpp  wvk_instimpl.gfx.hpp  wvk_pipeline.gfx.cpp  wvk_pipeline.gfx.hpp  wvk_scene.gfx.cpp  wvk_scene.gfx.hpp  wvk_types.gfx.hpp  wvk_utils.gfx.cpp  wvk_utils.gfx.hpp  wvk_vulkan.gfx.cpp  wvk_vulkan.gfx.hpp
source/wvk/ui/: wvk_uibutton.cpp
wen.engine/: CMakeLists.txt  Wen_entry.h
wen.engine/Wen/: Wen.h  Wen_Application.h  Wen_Context.h  Wen_Core.h  Wen_Event.h  Wen_Interface.h  Wen_application.h  Wen_context.h  Wen_core.h  Wen_interface.h  Wen_pch.h
wengine/: CMakeLists.txt
wengine/include/: wen_defines.hpp
wengine/include/wen/: wen.hpp  wen_defines.hpp  wen_engine.hpp  wen_entry.hpp  wen_game_type.hpp
wengine/include/wen/component/: gui.hpp  imgui_gfx.hpp  input.hpp  renderer.hpp  transform.hpp  wen_gui.hpp  wen_imgui.hpp  wen_input.hpp  wen_material.hpp  wen_math.hpp  wen_pipeline_phase.hpp  wen_primitive.hpp  wen_renderer.hpp  wen_transform.hpp  wen_window.hpp  window.hpp
wengine/include/wen/core/: wen_clock.hpp  wen_engine.hpp  wen_event.hpp  wen_input.hpp  wen_logger.hpp  wen_memory.hpp
wengine/include/wen/datastructures/: wen_strbuf.hpp  wen_vec.hpp
wengine/include/wen/internal/: wen_internal_defines.hpp
wengine/include/wen/platform/: wen_platform.hpp
wengine/include/wen/renderer/: wen_renderer_backend.hpp  wen_renderer_frontend.hpp  wen_renderer_types.inl
wengine/include/wen/renderer/vulkan/: vulkan_backend.hpp  vulkan_device.hpp  vulkan_image.hpp  vulkan_platform.hpp  vulkan_swapchain.hpp  vulkan_types.inl  vulkan_utils.hpp
wengine/include/wen/system/: engine.hpp  gui.hpp  imgui_gfx.hpp  input.hpp  renderer.hpp  transform.hpp  wen_imgui.hpp  wen_input.hpp  wen_material.hpp  wen_primitive.hpp  wen_renderer.hpp  wen_window.hpp  window.hpp
wengine/source/: wen.cpp  wen_engine.cpp  wen_entry.hpp
wengine/source/common/: wen_glm_common.hpp  wen_pch.hpp  wen_private_defines.hpp
wengine/source/component/: gui.cpp  imgui_gfx.cpp  input.cpp  renderer.cpp  transform.cpp  wen_gui.cpp  wen_imgui.cpp  wen_input.cpp  wen_material.cpp  wen_math.cpp  wen_pipeline_phase.cpp  wen_primitive.cpp  wen_renderer.cpp  wen_tranform.cpp  wen_window.cpp  window.cpp
wengine/source/core/: wen_clock.cpp  wen_core_options.hpp  wen_engine.cpp  wen_engine.hpp  wen_event.cpp  wen_input.cpp  wen_logger.cpp  wen_logger.hpp  wen_memory.cpp
wengine/source/datastructures/: wen_strbuf.cpp  wen_vec.cpp
wengine/source/graphics/renderer/: wen_renderer_be.cpp  wen_renderer_be.hpp  wen_renderer_ft.cpp  wen_renderer_ft.hpp  wen_renderer_types.hpp
wengine/source/graphics/renderer/vulkan/: vk_buffer.cpp  vk_buffer.hpp  vk_command_buffer.cpp  vk_command_buffer.hpp  vk_context.cpp  vk_context.hpp  vk_debug.cpp  vk_debug.hpp  vk_device.cpp  vk_device.hpp  vk_ext.cpp  vk_ext.hpp  vk_frame_buffer.cpp  vk_frame_buffer.hpp  vk_image.cpp  vk_image.hpp  vk_options.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_rendererpass.cpp  vk_shader.cpp  vk_shader.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_sync.cpp  vk_sync.hpp  vk_types.hpp  vk_types.inl  vk_utils.cpp  vk_utils.hpp
wengine/source/graphics/renderer/vulkan/common/: vk_common.cpp  vk_common.hpp  vk_initializers.hpp
wengine/source/platform/: wen_desktop_glfw.cpp  wen_desktop_glfw.hpp  wen_desktop_sdl.cpp  wen_filesystem.cpp  wen_filesystem.hpp  wen_io.cpp  wen_io.hpp  wen_win32.cpp
wengine/source/privates/: wen_pch.hpp  wen_private_defines.hpp
wengine/source/renderer/: wen_renderer_backend.cpp  wen_renderer_frontend.cpp
wengine/source/renderer/vulkan/: vulkan_backend.cpp  vulkan_command_buffer.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_image.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp  vulkan_utils.cpp
wengine/source/system/: engine.cpp  gui.cpp  imgui_gfx.cpp  input.cpp  renderer.cpp  transform.cpp  wen_imgui.cpp  wen_input.cpp  wen_material.cpp  wen_primitive.cpp  wen_renderer.cpp  wen_window.cpp  window.cpp
wengine/source/utils/: shader_compiler.cpp  shader_compiler.hpp  shader_utils.cpp  shader_utils.hpp
(+28 files in other folders)
